# kodegen-tools-citescrape

./: BUG_FIX_WEB_SEARCH_TIMEOUT.md  Cargo.toml  README.md  allow-annotations.txt  clippy-output.txt  clippy-warnings-after-removal.txt
.config/: nextest.toml
analysis/: html-vs-markdown-root-cause-analysis.md
examples/: citescrape_demo.rs  claude_code.rs  direct_crawl_ratatui.rs  direct_web_search.rs  mcp.rs  ratatui.rs  single_url.rs  test_extract_main_content.rs  test_full_conversion.rs  test_link_extraction.rs  test_npm_bug.rs  verify_bold_spacing.rs  web_search.rs
examples/common/: mod.rs
prompts/: MARKDOWN_QUALITY.md  MARKDOWN_QUALITY_AUG.md  MARKDOWN_QUALITY_QA.md
src/: browser_profile.rs  browser_setup.rs  lib.rs  main.rs
src/browser_pool/: mod.rs
src/config/: builder.rs  getters.rs  methods.rs  mod.rs  types.rs
src/content_saver/: cache_check.rs  compression.rs  html_saver.rs  indexing.rs  json_saver.rs  markdown_saver.rs  mod.rs
src/content_saver/markdown_converter/: html_preprocessing.rs  html_to_markdown.rs  markdown_postprocessing.rs  mod.rs
src/content_saver/markdown_converter/custom_handlers/: code_language_handler.rs  inline_element_handler.rs  language_inference.rs  language_patterns.rs  link_handler.rs  list_processing.rs  mod.rs
src/content_saver/markdown_converter/htmd/: dom_walker.rs  mod.rs  node_util.rs  text_util.rs
src/content_saver/markdown_converter/htmd/element_handler/: anchor.rs  aside.rs  blockquote.rs  br.rs  button.rs  caption.rs  code.rs  definition_list.rs  details.rs  dialog.rs  div.rs  element_util.rs  emphasis.rs  figure.rs  footer.rs  head_body.rs  header.rs  headings.rs  hr.rs  html.rs  img.rs  input.rs  keyboard.rs  language_inference.rs  language_patterns.rs  li.rs  list.rs  list_processing.rs  mark.rs  media.rs  mod.rs  nav.rs  p.rs  pre.rs  ruby.rs  section.rs  semantic.rs  span.rs  strikethrough.rs  subscript_superscript.rs  (+7 more)
src/content_saver/markdown_converter/html_preprocessing/: code_block_protection.rs  expressive_code.rs  html_cleaning.rs  main_content_extraction.rs  mod.rs  preformatted_detection.rs  table_preprocessing.rs
src/content_saver/markdown_converter/markdown_postprocessing/: block_spacing.rs  bracket_unescaping.rs  code_block_cleaning.rs  code_fence_detection.rs  heading_extraction.rs  mod.rs  processor.rs  shell_syntax_repair.rs  tests.rs  whitespace_normalization.rs
src/crawl_engine/: circuit_breaker.rs  cleanup.rs  clippy-final-check.txt  content_validator.rs  core.rs  crawl_types.rs  crawler.rs  domain_limiter.rs  execution.rs  link_processor.rs  mod.rs  orchestrator.rs  page_enhancer.rs  page_processor.rs  page_timeout.rs  progress.rs  rate_limiter.rs  retry_queue.rs
src/crawl_events/: bus.rs  config.rs  errors.rs  metrics.rs  mod.rs  streaming.rs  types.rs
src/crawl_events/bus/: core.rs  impls.rs  metrics_reporting.rs  mod.rs  publishing.rs  shutdown.rs  subscription.rs
src/imurl/: mod.rs
src/inline_css/: core.rs  css_downloader.rs  domain_queue.rs  downloaders.rs  image_downloader.rs  kuchiki_test.rs  mod.rs  orchestrator.rs  processors.rs  svg_downloader.rs  types.rs  utils.rs
src/kromekover/: config.rs  mod.rs
src/kromekover/evasions/: canvas_noise.js  cdp_evasion.js  chrome_app.js  chrome_runtime.js  core_utils.js  font_spoof.js  hardware_concurrency.js  media_codecs.js  navigator_language.js  navigator_permissions.js  navigator_plugins.js  navigator_vendor.js  navigator_webdriver.js  proxy_utils.js  user_agent_data.js  webgl_vendor_override.js  window_outerdimensions.js
src/link_index/: mod.rs
src/link_rewriter/: mod.rs
src/mcp/: fetch.rs  get_crawl_results.rs  manager.rs  mod.rs  registry.rs  search_crawl_results.rs  session.rs  start_crawl.rs  types.rs  validation.rs  web_search.rs
src/mcp/manager/: manifest_manager.rs  mod.rs  path_utils.rs  search_cache.rs  session_manager.rs  timestamp_utils.rs
src/page_extractor/: extractors.rs  js_scripts.rs  link_rewriter.rs  mod.rs  page_data.rs  page_data_config.patch  schema.rs
src/runtime/: async_stream.rs  async_wrappers.rs  channel.rs  mod.rs
src/search/: engine.rs  errors.rs  incremental.rs  mod.rs  runtime_helpers.rs  schema.rs  types.rs
src/search/incremental/: mod.rs  sender.rs  service.rs  stats.rs  tests.rs  types.rs
src/search/indexer/: batch.rs  discovery.rs  mod.rs  progress.rs
src/search/indexer/markdown/: footnote.rs  helpers.rs  inline.rs  mod.rs  plaintext.rs  snippet.rs  title.rs
src/search/query/: builder.rs  execution.rs  mod.rs  parsing.rs  query_builders.rs  results.rs  snippets.rs
src/utils/: constants.rs  mod.rs  string_utils.rs  url_utils.rs
src/web_search/: browser.rs  manager.rs  mod.rs  page_helpers.rs  search.rs  types.rs
templates/: index.html
tests/: VERIFICATION_REPORT_TASK_014.md  batch_indexing_test.rs  bold_marker_spacing_test.rs  config_tests.rs  content_saver_compression.rs  content_saver_markdown_converter_html_preprocessing.rs  crawl_events_test.rs  crawl_rate_limiter_test.rs  debug_url_normalization.rs  downloader_rate_limiting_test.rs  exhaustive_path_validation.rs  hairline_fix_test.html  heading_extraction_test.rs  indexing_limits_test.rs  inline_css_iterator_test.rs  integration_config_test.rs  kromekover_tests.rs  link_rewriter_test.rs  markdown_converter_code_blocks_test.rs  mcp.rs  path_validation_tests.rs  query_tests.rs  rate_limiter_async_test.rs  runtime_helpers_test.rs  search_errors_test.rs  search_integration_test.rs  test_actual_scraped_html.rs  test_redos_resistance.rs  verification_standalone.rs  verify_bold_spacing.py  verify_bold_spacing_standalone.rs  web_search_mod.rs
tests/common/: mod.rs
tests/fixtures/: code_block_newlines.html
tests/mcp/: test_validation.rs
