
[package]
name = "kodegen_tools_citescrape"
version = "0.10.12"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-citescrape"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_citescrape"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]

kodegen_mcp_schema = { version = "0.10", path = "../kodegen-mcp-schema" }
kodegen_server_http = { version = "0.10", path = "../kodegen-server-http" }
kodegen_config = { version = "0.10", path = "../kodegen-config" }
kodegen_config_manager = { version = "0.10", path = "../kodegen-config-manager" }

log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
cyrup_termcolor = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
lru = "0.16"

# MCP tool dependencies
rmcp = { version = "0.11", features = ["client", "schemars", "server", "transport-child-process", "transport-io", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
html-escape = "0.2"
htmlentity = "1.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
chromiumoxide = { version = "0.8", features = ["tokio-runtime", "bytes", "_fetcher-native-tokio"], default-features = false }
chromiumoxide_cdp = { version = "0.8" }
chromiumoxide_types = { version = "0.8" }
scraper = "0.25"
ego-tree = "0.10"
kuchiki = "0.8"
lol_html = "2"
lazy_static = "1"
rand = "0.9"
hex = "0.4"
sanitize-filename = "0.6"
imstr = "0.2"
url = "2"
urlencoding = "2.1"
htmd = "0.5"
html5ever = "=0.35"
markup5ever_rcdom = "=0.35"
flate2 = "1"
convert_case = "0.10"
tempfile = "3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.22"
pathdiff = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
dirs = "6"
futures-core = "0.3"
futures-executor = "0.3"

# Syntax highlighting
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Search indexing
tantivy = "0.25"
jwalk = "0.8"
smallvec = "1"
smallstr = "0.3"
arrayvec = "0.7"
ahash = "0.8"
dashmap = "6"
num_cpus = "1"
parking_lot = "0.12"
once_cell = "1"
crossbeam-utils = "0.8"
rayon = "1"

[dev-dependencies]
kodegen_mcp_client = { version = "0.10", path = "../kodegen-mcp-client" }
const_format = "0.2"
assert_fs = "1"
mockito = "1"
proptest = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["mirror"]
focus = []
mirror = []
present-progressive = []

[lib]
name = "kodegen_tools_citescrape"
path = "src/lib.rs"

[[example]]
name = "mcp"
path = "examples/mcp.rs"

[[example]]
name = "single_url"
path = "examples/single_url.rs"

[[example]]
name = "ratatui"
path = "examples/ratatui.rs"

[[example]]
name = "web_search"
path = "examples/web_search.rs"

[[example]]
name = "claude_code"
path = "examples/claude_code.rs"

[[bin]]
name = "kodegen-citescrape"
path = "src/main.rs"
